# PENCI

./: .gitignore  AGENTS.md  PENCI技术路线.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  smoke_test.yaml  stage1_eval.yaml  stage1_real.yaml  stage1_sim.yaml  stage2_connectivity.yaml  stage2_eval.yaml  train_3gpu_134_safe.yaml  train_8gpu_12_safe.yaml
deprecated_legacy_archive/moved/configs/: default.yaml  train_3gpu_134_safe.yaml  (+2 more)
deprecated_legacy_archive/snapshots/: README.md
docs/: ddp_hang_diagnosis.md  dynamic_leadfield_plan.md  dynamic_leadfield_system.md  electrode_fingerprint_system.md  io_and_nan_fix_summary.md  session_summary.md  technical_roadmap.md  train_val_hdf5_nfs_strategy.md  training_guide.md
penci/: __init__.py
penci/data/: __init__.py  dataset.py
penci/encoders/: __init__.py  backward_solution.py  encoder.py  sensor_embed.py
penci/models/: __init__.py  penci_model.py  physics_decoder.py
penci/modules/: __init__.py  attention.py  conv.py  lstm.py  seanet.py
penci/physics/: __init__.py  electrode_utils.py  leadfield_manager.py  source_space.py
penci/shared/: __init__.py
penci/training/: __init__.py  distributed.py  physics.py  prefetch.py
penci/utils/: __init__.py  metrics.py  state_metrics.py
penci/v1/: __init__.py
scripts/: __init__.py  convert_hbn_to_hdf5.py  convert_to_hdf5.py  convert_to_hdf5_by_fingerprint.py  evaluate.py  precompute_all_leadfields.py  run_train_8gpu.sh  train.py
scripts/v1/: __init__.py  convert_stage1_sim_to_hdf5.py  evaluate_stage1.py  evaluate_stage2.py  generate_stage1_sim_all_templates.sh  generate_stage1_sim_data.py  generate_stage2_sim_data.py  train_stage1.py  train_stage2.py
tests/: analyze_training_log.py  diagnose_system.py  test_file_scheduler.py  test_metrics.py  test_precompute_all_leadfields.py  test_sim_bucket_loader.py  test_smoke.py  test_stage1_sim_generator.py  test_stage1_sim_hdf5.py
(+44 files in other folders)
